force-app/main/default/objects/Producto__c/Producto__c.object-meta.xml
<CustomObject>
    <description>El objeto o categoría que pertenece un articulo</description>
    <label>Producto</label>
    <nameField>
        <label>Producto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>