force-app/main/default/objects/Producto__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agua</fullName>
            </value>
            <value>
                <fullName>Alimentación</fullName>
            </value>
            <value>
                <fullName>Carne</fullName>
            </value>
            <value>
                <fullName>Comida</fullName>
            </value>
            <value>
                <fullName>Consumo</fullName>
            </value>
            <value>
                <fullName>Fruta</fullName>
            </value>
            <value>
                <fullName>Gastos para la casa</fullName>
            </value>
            <value>
                <fullName>Higiene personal</fullName>
            </value>
            <value>
                <fullName>Lácteo</fullName>
            </value>
            <value>
                <fullName>Limpieza hogar</fullName>
            </value>
            <value>
                <fullName>Panificados</fullName>
            </value>
            <value>
                <fullName>Pileta</fullName>
            </value>
            <value>
                <fullName>Verdura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>