force-app/main/default/objects/Producto__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(  Image_URL__c ,  Name  &amp;  &quot; Image&quot;, $Setup.Proveedor_Logo_Image_Setting__c.Height__c, $Setup.Proveedor_Logo_Image_Setting__c.Width__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>