force-app/main/default/objects/Producto__c/fields/Image_Miniature__c.field-meta.xml
<CustomField>
    <fullName>Image_Miniature__c</fullName>
    <formula>IMAGE(  Image_URL__c  ,  Name  &amp; &quot; Image&quot;, 75, 75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Miniature</label>
    <type>Text</type>
</CustomField>