force-app/main/default/objects/Producto__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <defaultValue>&quot;https://amazing-astro-115394-dev-ed--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685w00000ESYeQ&amp;operationContext=CHATTER&amp;contentId=05T5w00000p8GO4&quot;</defaultValue>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>